# gradle-profiler-pttest

./: .gitignore  .mergify.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
gradle_profiler_pttest/: analysis_reporter.py  analysis_results.py  app.py  benchmark_parser.py  benchmarks_analyser.py  cli_parser.py  gradle_benchmark.py
tests/: test_app.py  test_benchmark_parser.py  test_benchmarks_analyser.py
tests/fixtures/: benchmark-one-task.csv  benchmark-two-tasks.csv
tests/fixtures/iosched/outdated-agp/: benchmark.html
tests/fixtures/iosched/updated-agp/: benchmark.csv
tests/fixtures/new-csv-format/h0/: benchmark.csv
tests/fixtures/new-csv-format/h1/: benchmark.csv
tests/fixtures/old-csv-format/iosched/outdated-agp/: benchmark.csv
tests/fixtures/old-csv-format/iosched/updated-agp/: benchmark.html
tests/fixtures/old-csv-format/samples/: benchmark-corrupted.csv
tests/fixtures/old-csv-format/sdksearch/jdk11/: benchmark.csv
tests/fixtures/old-csv-format/sdksearch/jdk8/: benchmark.html
tests/fixtures/samples/: benchmark-one-task.csv  benchmark-two-tasks.csv
tests/fixtures/sdksearch/jdk11/: benchmark.html
tests/fixtures/sdksearch/jdk8/: benchmark.csv
