[tool.poetry]
name = "gradle-profiler-pttest"
version = "0.0.4"
description = "Analyses the outcomes of two Gradle Profiler benchmarks with the Paired T-test statistical technique"
authors = ["Ubiratan Soares <ubiratan.f.soares@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dotanuki-labs/gradle-profiler-pttest"
repository = "https://github.com/dotanuki-labs/gradle-profiler-pttest"
include = [ "LICENSE.md" ]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8.5"
flake8 = "3.8.4"
pingouin = "0.3.8"
rich = "9.7.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.1"
pytest-cov = "2.10.1"

[tool.poetry.scripts]
gradle-profiler-pttest = "gradle_profiler_pttest:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
