[tool.poetry]
name = "gradle-profiler-pttest"
version = "0.0.4"
description = "Analyses the outcomes of two Gradle Profiler benchmarks with the Paired T-test statistical technique"
authors = ["Ubiratan Soares <ubiratan.f.soares@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dotanuki-labs/gradle-profiler-pttest"
repository = "https://github.com/dotanuki-labs/gradle-profiler-pttest"
include = [ "LICENSE.md" ]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
pingouin = "0.3.12"
rich = "10.9.0"
pretty-errors = "1.2.24"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "2.12.1"
flake8 = "3.9.2"
black = "21.8b0"
vulture = "2.3"

[tool.poetry.scripts]
gradle-profiler-pttest = "gradle_profiler_pttest:main"

[tool.black]
line-length = 100

[tool.vulture]
min_confidence = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
